--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
   MONGODB_URI=mongodb://localhost:27017/equipment
   
   NEXTAUTH_SECRET= codingwithstanley
-  NEXT_PUBLIC_BASE_URL=http://localhost:3000
+  NEXT_PUBLIC_BASE_URL=https://deployed-project.vercel.app
 
   EMAIL_ADDRESS=sampsonanim72@gmail.com
   EMAIL_PASS=lesescygzwuropsq
